# danmaku

./: .gitignore  CHANGELOG.md  README.md  build.bat  build.sh  danmaku.spec  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
assets/: DataBase.db
danmaku/: DataBase.db  animated.py  background.py  bullet.py  button.py  database.py  drop.py  enemy.py  entity.py  game.py  gameobject.py  history.py  level.py  main.py  menu.py  pause.py  player.py  settings.py  shooter.py  utils.py
danmaku/database/: __init__.py  construct.py  database.py  models.py
danmaku/game/: animated.py  background.py  bullet.py  drop.py  enemy.py  entity.py  game.py  gameobject.py  level.py  pause.py  player.py  shooter.py
danmaku/resources/: DataBase.db
danmaku/ui/: button.py  game_end.py  history.py  menu.py  settings.py
docs/: CHANGELOG.md  levels_prototoype.json  mecs.md  presentation.md  presentation.pptx
