[tool.poetry]
name = "danmaku"
version = "0.1.0"
description = ""
authors = ["Vlad <89295404+Virashu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
vgame = {git = "https://github.com/virashu/pygametest"}
peewee = "^3.17.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
